修复由于JAVA版本带来的BUG